--- a/themes/2020/layouts/_default/single.html
+++ b/themes/2020/layouts/_default/single.html
@@ -1,13 +1,22 @@
 {{ define "main" }}
-{{- partial "navbar.html" . -}}
-<div class="section">
+  {{- partial "navbar.html" . -}}
+  <div class="section">
     <div class="container">
-        <h1 class="title is-1 has-text-centered has-text-primary is-family-secondary">{{ .Title | markdownify }}</h1>
-        <div class="columns">
-            <div class="markdown has-text-weight-light column has-text-justified is-three-fifths is-offset-one-fifth">
-                {{ .Content }}
-            </div>
+      <h1 class="title is-1 has-text-centered has-text-primary is-family-secondary">{{ .Title | markdownify }}</h1>
+      <div class="columns">
+        <div class="markdown has-text-weight-light column has-text-justified is-three-fifths is-offset-one-fifth">
+          {{ with .Resources.GetMatch "teaser.jpg" }}
+            {{ with .Resize "1024x" }}
+              <img
+                class="img-responsive avatar has-image-border-primary is-full is-hidden-mobile"
+                src="{{ .Permalink }}"
+                alt="{{ .Name }}"
+              />
+            {{ end }}
+          {{ end }}
+          {{ .Content }}
         </div>
+      </div>
     </div>
-</div>
-{{end}}
+  </div>
+{{ end }}
