task: add border to service images

--- a/themes/2020/layouts/index.html
+++ b/themes/2020/layouts/index.html
@@ -57,7 +57,7 @@
                       {{ $serviceRef = $schminkworkshop.RelPermalink }}
                     {{ end }}
                     <a href="{{ $serviceRef }}" class="has-text-white">
-                      <img src="{{ .Permalink }}" alt="{{ .Title }}" width="100%" />
+                      <img src="{{ .Permalink }}" alt="{{ .Title }}" width="100%" class="has-image-border-primary" />
                       <div class="has-text-weight-light centered is-size-2 is-uppercase">{{ .Name }}</div>
                     </a>
                   </div>
