feat: finish contact form

--- a/themes/2020/layouts/shortcodes/contactform.html
+++ b/themes/2020/layouts/shortcodes/contactform.html
@@ -44,6 +44,19 @@
         <textarea class="textarea is-medium" id="message" placeholder="..." maxlength="1000"></textarea>
       </div>
     </div>
+    <div class="notification is-danger is-hidden" id="errorNotification">
+      <p>
+        Ups...da ist etwas schief gelaufen. Bitte versuche es später erneut. Wir arbeiten mit Hochdruck an der Behebung des Fehlers. Bitte
+        entschuldige die Unannehmlichkeiten.
+      </p>
+      <p>
+        Wenn du magst, kannst du alternativ auch direkt
+        <strong
+          >über den folgenden Link eine E-Mail an
+          <a href="mailto:sarah.schminkt@gmail.com?subject=Anfrage über sarahbonzelet.de">sarah.schminkt@gmail.com</a> schicken.</strong
+        >
+      </p>
+    </div>
     <div class="field">
       <div class="control">
         <button class="button is-fullwidth is-medium is-primary" id="contactFormSubmitButton">Anfrage jetzt absenden</button>
