fix: wrong phone number

--- a/themes/2020/layouts/partials/footer.html
+++ b/themes/2020/layouts/partials/footer.html
@@ -50,7 +50,7 @@
           </div>
         </div>
       </div>
-      <p class="is-size-7">&copy; 2020 Sarah Bonzelet. All Rights reserved.</p>
+      <p class="is-size-7">&copy; 2021 Sarah Bonzelet</p>
     </div>
   </div>
 </footer>
