fix: broken link to service

--- a/themes/2020/layouts/index.html
+++ b/themes/2020/layouts/index.html
@@ -53,7 +53,7 @@
                     {{ if eq .Name "Gästestyling" }}
                       {{ $serviceRef = $gastestyling.RelPermalink }}
                     {{ end }}
-                    {{ if eq .Name "Schminkworkshop" }}
+                    {{ if eq .Name "Schmink-Workshop" }}
                       {{ $serviceRef = $schminkworkshop.RelPermalink }}
                     {{ end }}
                     <a href="{{ $serviceRef }}" class="has-text-white">
