fix: update label for wedding date

--- a/themes/2020/layouts/shortcodes/contactform.html
+++ b/themes/2020/layouts/shortcodes/contactform.html
@@ -25,7 +25,7 @@
 
     <div class="columns">
       <div class="column">
-        <label class="label">Wann ist der Termin deiner Hochzeit?</label>
+        <label class="label">Wann ist der Termin deines Stylings?</label>
         <div class="control">
           <input class="input is-medium" type="date" id="weddingDate" placeholder="" />
         </div>
