task: add favicons

--- a/themes/2020/layouts/partials/footer.html
+++ b/themes/2020/layouts/partials/footer.html
@@ -39,13 +39,19 @@
           <div class="is-uppercase subtitle is-6">Social Media</div>
           <div class="columns is-gapless is-mobile">
             <div class="column">
-              <a href="{{ .Site.Params.instagram_url }}" target="_blank"><img src="/images/instagram.svg" width="24" height="24" /></a>
+              <a href="{{ .Site.Params.instagram_url }}" target="_blank" rel="noreferrer"
+                ><img src="/images/instagram.svg" width="24" height="24"
+              /></a>
             </div>
             <div class="column">
-              <a href="{{ .Site.Params.facebook_url }}" target="_blank"><img src="/images/facebook.svg" width="24" height="24" /></a>
+              <a href="{{ .Site.Params.facebook_url }}" target="_blank" rel="noreferrer"
+                ><img src="/images/facebook.svg" width="24" height="24"
+              /></a>
             </div>
             <div class="column">
-              <a href="{{ .Site.Params.pinterest_url }}" target="_blank"><img src="/images/pinterest.svg" width="24" height="24" /></a>
+              <a href="{{ .Site.Params.pinterest_url }}" target="_blank" rel="noreferrer"
+                ><img src="/images/pinterest.svg" width="24" height="24"
+              /></a>
             </div>
           </div>
         </div>
