feat: add location input field in contact form

--- a/themes/2020/layouts/shortcodes/contactform.html
+++ b/themes/2020/layouts/shortcodes/contactform.html
@@ -39,6 +39,21 @@
     </div>
 
     <div class="field">
+      <label class="label">Wie lautet die Adresse des Stylingortes?*</label>
+      <div class="control">
+        <input
+          class="input is-medium"
+          type="text"
+          id="location"
+          placeholder="Musterstraße 1, 12345 Musterstadt"
+          required
+          minlength="2"
+          maxlength="64"
+        />
+      </div>
+    </div>
+
+    <div class="field">
       <label class="label">Deine Nachricht an mich: (maximal 1000 Zeichen)</label>
       <div class="control">
         <textarea class="textarea is-medium" id="message" placeholder="..." maxlength="1000"></textarea>
