feat(website): update pricinglist for 2022

--- a/packages/website/themes/2020/layouts/shortcodes/price.html
+++ b/packages/website/themes/2020/layouts/shortcodes/price.html
@@ -1,8 +1,8 @@
 <div class="columns is-mobile is-gapless mb-0">
-    <div class="column is-three-quarters has-text-left">
-        {{.Get 0}}
-    </div>
-    <div class="column has-text-right">
-        {{.Get 1}}
-    </div>
+  <div class="column is-three-quarters has-text-left has-text-primary has-text-weight-bold">
+    {{ .Get 0 }}
+  </div>
+  <div class="column has-text-right">
+    {{ .Get 1 }}
+  </div>
 </div>
