style: update package description UI

--- a/packages/website/themes/2020/layouts/shortcodes/price.html
+++ b/packages/website/themes/2020/layouts/shortcodes/price.html
@@ -6,3 +6,8 @@
     {{ .Get 1 }}
   </div>
 </div>
+<div class="columns">
+  <div class="column is-three-quarters">
+    {{ .Get 2 }}
+  </div>
+</div>
